--- a/style.css
+++ b/style.css
@@ -304,6 +304,22 @@ table, thead, tbody, th, td, tr {
   text-decoration: line-through;
 }
 
+.textbox {
+  width: 100%;
+  height:100%;
+  background-color: inherit;
+  color: black;
+  border: none;
+  text-align: center;
+  font-size: inherit;
+}
+
+.textbox::placeholder {
+  color: black;
+  font-style: italic;
+  font-size: 0.5em;
+}
+
 @media only screen and (max-width: 1024px) {
   /* Force table to not be like tables anymore */
   table, thead, tbody, th, td, tr {
